2000-05-16  Tom Yu  <tlyu@mit.edu>

	* conv_princ.c (krb5_524_conv_principal): Make a copy of the krb5
	realm that is nul-terminated to avoid falling off the end of the
	krb5 realm, which is not necessarily nul-terminated.

2000-05-16  Nalin Dahyabhai  <nalin@redhat.com>

	* kfree.c (krb5_free_keyblock_contents): Set contents pointer to
	null after freeing.

2000-05-15      Jeffrey Altman          <jaltman@columbia.edu>

        * Added new source file appdefault.c
          Implements new public functions

               krb5_appdefault_string
               krb5_appdefault_boolean

2000-05-12  Ken Raeburn  <raeburn@mit.edu>

	* t_kerb.c (test_524_conv_principal): New test code, to exercise
	yesterday's code addition.
	(main, usage): Updated.
	* t_krb5.conf: Added stanford.edu->IR.STANFORD.EDU mapping, and a
	test case for improperly long v4 realm names.
	* Makefile.in (check-unix): Run 524 conversion test for some test
	Athena and Stanford names.
	* t_ref_kerb.out: Updated.

	* init_ctx.c (init_common): Feed current-microsecond time and
	process-id into PRNG, instead of just current-second time.
	* mk_req_ext.c (krb5_mk_req_extended): Feed current time into
	PRNG if a subkey will be generated.
	* sendauth.c (krb5_sendauth): Feed local and remote addresses of
	socket, if they can be determined, into the PRNG if a subkey will
	be used.

2000-05-11  Ken Raeburn  <raeburn@mit.edu>
	    Booker C. Bense  <bbense@networking.stanford.edu>

	* conv_princ.c (krb5_524_conv_principal): Look up v4_realm in
	config file, in case site's krb4 realm name isn't the same as the
	krb5 realm name.

2000-04-28  Nalin Dahyabhai  <nalin@redhat.com>

	* chk_trans.c (krb5_check_transited_list): Don't overflow buffers
	"prev" and "next".
	* conv_princ.c (krb5_425_conv_principal): Don't overflow buffer
	"buf".

2000-04-28	Alexandra Ellwood	<lxs@mit.edu>

	* gic_pwd.c (krb5_init_creds_password) added code to return to
	login library if the password is expired (login library handles